# spandoc-example

./: Cargo.toml
src/: lib.rs
